syntax = "proto3";

package v2ray.core.transport.internet.ws;
option go_package = "ws";
option java_package = "com.v2ray.core.transport.internet.ws";
option java_outer_classname = "ConfigProto";

message Config {
  bool connection_reuse = 1;
  string path = 2;
}